# template-switch-verifier

./: Cargo.toml
src/: main.rs
