[package]
name = "tsverify"
description = "Compare alignments produced by tsalign"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
license = "BSD-2-Clause"
repository = "https://github.com/ISibboI/template-switch-verifier.git"
version = "0.2.0"
edition = "2021"

[dependencies]
lib_tsalign = { version = "0.14.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-value = "0.7.0"
toml = "0.8.20"
clap = { version = "4.5.34", features = ["derive"] }
log = "0.4.27"
simplelog = "0.12.2"
