[package]
name = "tsverify"
description = "Compare alignments produced by tsalign"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
license = "BSD-2-Clause"
repository = "https://github.com/ISibboI/template-switch-verifier.git"
version = "0.2.0"
edition = "2024"

[dependencies]
lib_tsalign = { version = "0.18.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde-value = "0.7.0"
toml = "0.8.22"
clap = { version = "4.5.38", features = ["derive"] }
log = "0.4.27"
simplelog = "0.12.2"
